crates/evaluator/src/snapshots/kcl_evaluator__tests__assign_stmt_4.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a: 1
b: 2
