crates/evaluator/src/snapshots/kcl_evaluator__tests__assign_stmt_6.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- key: 1
- key: 0
