crates/evaluator/src/snapshots/kcl_evaluator__tests__assign_stmt_7.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- key:
    key:
    - 1
    - 0
- key:
    key:
    - 0
    - 0
