crates/evaluator/src/snapshots/kcl_evaluator__tests__aug_assign_stmt_12.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- 1
- 0
- 0
- 0
- 0
