crates/evaluator/src/snapshots/kcl_evaluator__tests__aug_assign_stmt_13.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- key: 2
- key: 1
- key: 1
- key: 1
- key: 1
