crates/evaluator/src/snapshots/kcl_evaluator__tests__aug_assign_stmt_14.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- key:
    key:
    - 1
    - 0
- key:
    key:
    - 0
    - 0
- key:
    key:
    - 0
    - 0
- key:
    key:
    - 0
    - 0
- key:
    key:
    - 0
    - 0
